ingress/ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api1"
        backend:
          service:
            name: api-1
            port:
              number: 3001
      - pathType: Prefix
        path: "/api2"
        backend:
          service:
            name: api-2
            port:
              number: 3002
